# Fullcycle-Ia-Agents

./: COMPARISON.md  README.md  ideas.txt
Tech Week IA for Devs/: README.md  links.txt
techweekia9-multi-agents-rag-main/: .gitignore  .mcp.json  README.md  docker-compose.yml
techweekia9-multi-agents-rag-main/db/: init.sql
techweekia9-multi-agents-rag-main/services/agents/: .env.example  Dockerfile  pyproject.toml
techweekia9-multi-agents-rag-main/services/agents/agents/: analise_agent.py  jurisprudencia_agent.py  pesquisa_agent.py  root_agent.py
techweekia9-multi-agents-rag-main/services/agents/app/: config.py  db.py  server.py
techweekia9-multi-agents-rag-main/services/agents/ingestion/: embeddings.py  ingest.py  mock_data.py
techweekia9-multi-agents-rag-main/services/agents/tools/: get_process_context.py  list_processes.py  search_process.py  search_similar.py  select_process.py
techweekia9-multi-agents-rag-main/services/web/: package-lock.json  package.json  tailwind.config.ts
techweekia9-multi-agents-rag-main/services/web/app/: globals.css  layout.tsx  page.tsx
techweekia9-multi-agents-rag-main/services/web/app/api/chat/: route.ts
techweekia9-multi-agents-rag-main/services/web/app/components/: Chat.tsx  MessageInput.tsx  MessageList.tsx  ProcessSelector.tsx
techweekia9-multi-agents-rag-main/services/web/lib/: api.ts
techweekia9-prompt-main/: README.md  frontend.html  llm.py  main.py  prompts.py  techniques.py
techweekia9-prompt-main/docs/: setup.md
techweekia9-prompt-main/routes/: logic.py  review.py
